src/objects/Euclidean_Calculation__c.object
<CustomObject>
    <fields>
        <fullName>Cordinate1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cordinate 1</label>
        <referenceTo>Coordinate__c</referenceTo>
        <relationshipLabel>Euclidean Calculations</relationshipLabel>
        <relationshipName>Euclidean_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cordinate2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cordinate 2</label>
        <referenceTo>Coordinate__c</referenceTo>
        <relationshipLabel>Euclidean Calculations (Cordinate 2)</relationshipLabel>
        <relationshipName>Euclidean_Calculations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Euclidean_Distance__c</fullName>
        <formula>SQRT((Cordinate1__r.X_Coordinate__c -Cordinate2__r.X_Coordinate__c)*(Cordinate1__r.X_Coordinate__c -Cordinate2__r.X_Coordinate__c)+(Cordinate1__r.Y_Coordinate__c -Cordinate2__r.Y_Coordinate__c)*(Cordinate1__r.Y_Coordinate__c -Cordinate2__r.Y_Coordinate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Euclidean Distance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Euclidean Calculation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cordinate1__c</columns>
        <columns>Cordinate2__c</columns>
        <columns>Euclidean_Distance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Eucledian  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Euclidean Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>